bad/main_returning_void.example_compiler_output
ERROR
[1mbad/main_returning_void.lat:2:1: [1;31merror: [0;1mfunction `main` has to return `int`[m
void main() {}
[1;32m^[m
